--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.468.0",
     "next": "14.2.16",
     "react": "^18",
